nav section added

--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 </head>
 <body>
     <head>
-        
-
+        <!-- nav section -->
+        <section class="w-11/12 mx-auto mt-10">
+            <div class="grid grid-cols-1  md:flex lg:flex md: justify-between lg:justify-between">
+                <img class="ml-24 md:ml-0 lg:ml-0" src="./image/Logo.png" alt="">
+                <button id="sort" class="btn bg-[#25252533] rounded-lg ">Sort by view</button>
+                <button id="blog" class="btn bg-[#FF1F3D] text-white rounded-lg">Blog</button>
+            </div>
+            <hr class="mt-5 ">
+        </section>
     </head>
-    <main class="w-3/4 mx-auto mt-10">
+    <main class="w-11/12 mx-auto mt-10">
         
     </main>
     <footer>
