target attribute removed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="grid grid-cols-1  md:flex lg:flex md: justify-between lg:justify-between">
                 <img class="ml-24 md:ml-0 lg:ml-0" src="./image/Logo.png" alt="">
                 <button id="sort" class="btn md:mr-16 lg:mr-28 bg-[#25252533] rounded-lg ">Sort by view</button>
-                <a href="./blog.html" target="_blank" class="btn bg-[#FF1F3D] text-white rounded-lg">Blog</a>
+                <a href="./blog.html" class="btn bg-[#FF1F3D] text-white rounded-lg">Blog</a>
             </div>
             <hr class="mt-5 ">
         </section>
