question added in blog html

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 <body>
     <!-- var, let , const section -->
     <section class="w-3/4 mx-auto mt-10 text-center border-2 border-solid border-black px-3 py-3">
-        <h1 class="text-5xl text-red-500 font-semibold underline">' Var - Let - Const'</h1>
+        <h1 class="text-5xl text-red-500 font-semibold underline">'Discuss the scope of var, let, and const'</h1>
         <hr class="mt-5">
         <h4 class="text-4xl mt-5 font font-semibold text-green-700">var: <span class="text-2xl text-black">"Var is a variable declaration method in JavaScript. It has function scope and global scope, but it doesn't have block scope. When a variable is declared with var inside a function, it becomes accessible throughout the entire function. Variables declared with var are hoisted to the top of their containing function or global scope."</span></h4>
         <h4 class="text-4xl mt-5 font font-semibold text-green-700">let: <span class="text-2xl text-black">"Let is a block scope. If it's declared within a function, then let only accessible within that function. Unlike variables declared with var, let variables are not hoisted to the top of their block.In let variable there value can be reassined after they are assigned a value."</span></h4>
@@ -19,7 +19,7 @@
 
     <!-- null and undefined section -->
     <section class="w-3/4 mx-auto mt-10 text-center border-2 border-solid border-black px-3 py-3" >
-        <h1 class="text-5xl text-red-500 font-semibold underline">' Null & Undefined'</h1>
+        <h1 class="text-5xl text-red-500 font-semibold underline">'Tell us the use cases of null and undefined'</h1>
         <hr class="mt-5">
         <h4 class="text-4xl mt-5 font font-semibold text-green-700 ">null: <span class="text-2xl text-black">"Null is a primitive data type in JavaScript. It indicates the absence of a value for a variable. It is often used to reset a variable or indicate that it has no value or no reference to an object."</span></h4>
         <h4 class="text-4xl mt-5 font font-semibold text-green-700 ">undefined: <span class="text-2xl text-black">"Undefined is also a primitive data type in JavaScript. Undefined means the variable has been declared, but its value has not been assigned."</span></h4>
@@ -27,7 +27,7 @@
 
     <!-- rest api -->
     <section class="w-3/4 mx-auto mt-10 mb-5 text-center border-2 border-solid border-black px-3 py-3">
-        <h1 class="text-5xl text-red-500 font-semibold underline">' REST API '</h1>
+        <h1 class="text-5xl text-red-500 font-semibold underline">'What do you mean by REST API?'</h1>
         <hr class="mt-5">
         <h4 class="text-2xl mt-5 text-black">"REST API is an API, or Application Programming Interface, defines a set of rules and protocols that allow different software applications or systems to connect to and communicate with each other. REST API is a specific type of API that follows the principles of REST for web-based communication"</h4>
     </section>
